<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profil"
            android:icon="@drawable/ic_baseline_person_24"
            android:title="@string/mon_profil" />
        <item
            android:id="@+id/nav_mes_documents"
            android:icon="@drawable/ic_menu_article"
            android:title="@string/menu_mes_documents" />
        <item
            android:id="@+id/nav_commande_documents"
            android:icon="@drawable/ic_menu_command"
            android:title="@string/menu_commande_document" />
        <item
            android:id="@+id/nav_proposition_document"
            android:icon="@drawable/ic_menu_suggest"
            android:title="@string/menu_document_propose" />
        <item
            android:id="@+id/nav_liste_document"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_document_liste" />
    </group>
</menu>