<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_mes_documents">

    <fragment
        android:id="@+id/nav_mes_documents"
        android:name="com.example.e_gouvernance.ui.mes_documents.MesDocumentsFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_mes_documents" />

    <fragment
        android:id="@+id/nav_commande_documents"
        android:name="com.example.e_gouvernance.ui.commande_document.CommandeDocumentFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_commande_document" />

    <fragment
        android:id="@+id/nav_proposition_document"
        android:name="com.example.e_gouvernance.ui.suggestion_documents.SuggestionDocumentFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_suggestion_document" />
    <fragment
        android:id="@+id/nav_liste_document"
        android:name="com.example.e_gouvernance.ui.liste_document.ListeDocumentFragment"
        android:label="@string/menu_document_liste"
        tools:layout="@layout/fragment_liste_document" />
    <fragment
        android:id="@+id/nav_profil"
        android:name="com.example.e_gouvernance.ui.profil.ProfilFragment"
        android:label="@string/mon_profil"
        tools:layout="@layout/fragment_profil" />
    <fragment
        android:id="@+id/QrCode"
        android:name="com.example.e_gouvernance.ui.qrCode.QrCodeFragment"
        android:label="Scanner QR Code"
        tools:layout="@layout/fragment_qr_code" />
</navigation>